fixing stylinng bleeding issues

--- a/pages/donate/main.module.sass
+++ b/pages/donate/main.module.sass
@@ -65,7 +65,7 @@ p
 
 .donate-img
   position:absolute
-  z-index:5
+  z-index: 1
   height: 80vh
   width: 100%
   object-fit: cover
@@ -74,3 +74,54 @@ p
   position:absolute
   z-index: 100
   padding: 0 20px
+
+.donate-container
+  height: 80vh
+  display: flex
+  justify-content: center
+  align-items: center
+
+.donate-title
+  flex: 0 0 50%
+  width: 100%
+  text-decoration: none
+
+  a
+    color: white
+    text-decoration: none
+
+    &:hover
+      text-decoration: none
+
+  color: white
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6)
+  font-family: "Maven Pro", sans-serif
+  padding: 0
+
+.donate-info
+  flex: 0 0 50%
+  background: rgba(255,255,255,0.6)
+  padding: 25px
+  color: black
+  width: 80%
+  font-size: 18px
+
+  a
+    color: black
+    font-weight: bold
+    text-decoration: none
+
+.donate-img
+  position: absolute
+  z-index: 1
+  height: 80vh
+  width: 100%
+  object-fit: cover
+
+.text-donate
+  position: absolute
+  z-index: 2
+  display: flex
+  gap: 3em
+  justify-content: center
+  align-items: center
