--- a/pages/people/main.module.sass
+++ b/pages/people/main.module.sass
@@ -1,5 +1,6 @@
 .htnl, .body, .main
     color: black
+    background-color: white
 
 a:hover
     text-decoration: none
@@ -14,7 +15,7 @@ a:hover
     padding-top: 100px
 
 .line
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid black
   width: 60%
   margin: 0 20% 
 
@@ -40,7 +41,7 @@ a:hover
             color: white !important
     .description
         display: flex
-        flex-direction: column;
+        flex-direction: column
         gap: .25em
         text-align: right
         position:absolute
@@ -68,10 +69,6 @@ a:hover
     object-fit: cover
     width: 100%
 
-.name
-    font-size: 25px
-    font-weight: 200px
-
 .role
     font-weight: 400px
 
@@ -81,7 +78,7 @@ a:hover
 
 .subtitle
   margin-left: 20%
-  color: black;
+  color: black
 
 .search-bar 
     background-color: white
@@ -118,4 +115,3 @@ a:hover
 .search-bar
     display: flex
     flex-direction: column
-
